# Compiler

./: CMakeLists.txt  Compilers.docx  Phase 2.docx  main.cpp  prog.txt  table.trnstb  table.xlsx  test.txt  test2.txt  test_input_file_phase_2.txt
Builder/: Builder.cpp  Builder.h
Components/: DFA.cpp  DFA.h  Edge.cpp  Edge.h  LexicalRule.h  LexicalRuleBuilder.cpp  LexicalRuleBuilder.h  Minimizer.cpp  Minimizer.h  NFA.cpp  NFA.h  Node.cpp  Node.h  ReadLexicalRulesFile.cpp  ReadLexicalRulesFile.h  Scanner.cpp  Scanner.h  Test_Components.cpp  Test_Components.h  Token.cpp  Token.h
Converter/: Converter.cpp  Converter.h
DFA/: DFA.cpp  DFA.h
LEX/: lex.yy.c  test_lab.txt  test_lab.txt.bak
NFA/: NFA.cpp  NFA.h
Parser_Generator/Components/: ProductionRule.cpp  ProductionRule.h  ProductionTerm.h  SyntacticTerm.cpp  SyntacticTerm.h
Parser_Generator/Evaluator/: Parser.cpp  Parser.h
Parser_Generator/File_Reader/: ReadInputFile.cpp  ReadInputFile.h
Parser_Generator/LL(1) Converter/: LL1Converter.cpp  LL1Converter.h
Parser_Generator/Parsing Table Constructor/: ParsingTable.cpp  ParsingTable.h
Phase 3/: LEX.l  Label.cpp  Label.h  Report-Compiler-Phase-3.docx  Report.docx  SYN.y  code.txt  code1.txt  jasminCommands.txt  lex.yy.c  makefile  out.j  try.txt  y.tab.c  y.tab.h
tests/test1/: lexical_rules.txt  lexical_rules_table.trnstb  production_rules.txt  production_rules_table.trnstb  production_rules_table.xlsx  program_test.txt  program_test_derivations.txt
tests/test2/: lexical_rules.txt  lexical_rules_table.trnstb  production_rules.txt  production_rules_table.trnstb  program_test.txt  program_test_derivations.txt
tests/test3/: program_test.txt
